--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1182,6 +1182,25 @@ Look through the traces for your parameters.
 \colorbox{Thistle}{\bf ?} Are there any parameters in your log files that show trends or large leaps? What steps might you take to solve these issues?
 \end{framed}
 
+In {\tt Tracer} you can view the marginal probability distributions of your parameters in the \mi{Marginal Prob Distribution} window. 
+Using this tool, you can compare the distributions of several different parameters (by selecting them both).
+
+\begin{framed}
+Go to the \cl{diversification} parameter in the \mi{Marginal Prob Distribution} window.
+
+\colorbox{Thistle}{\bf ?} What is the mean value estimated for the net diversification rate ($d$)? What does the marginal distribution tell you about the net diversification? (Hint: $d = \lambda - \mu$)
+\end{framed}
+
+While specifying the model, remember that we created several deterministic nodes that represent parameters that we would like to estimate, including the net diversification rate. 
+{\tt Tracer} allows us to view the summaries of these parameters since they appear in our log files.
+
+\begin{framed}
+Go to the \cl{age\_extant} parameter in the \mi{Estimates} window.
+
+\colorbox{Thistle}{\bf ?} What is the mean and 95\% highest posterior density of the age of the MRCA for all living bears? 
+\end{framed}
+
+
 \medskip
 \subsubsection{Summarize Tree}\label{subsub:Exercise-SummarizeTree}
 
