--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1211,7 +1211,6 @@ trace = readTreeTrace("output/bears.trees")
 \end{lstlisting}
 \end{snugshade*}}
 
-
 The first thing we need to do is remove taxa for which we did not have any molecular or morphological data.
 The phylogenetic placement of these taxa is based only on their occurrence times and any clade constraints we applied (section \ref{subsub:Exercise-FBD-Constraints}). 
 Because no data are available to resolve their relationships to other lineages, we will treat their placement as \href{https://en.wikipedia.org/wiki/Nuisance_parameter}{\textit{nuisance parameters}} and remove them from the summary tree.
@@ -1285,6 +1284,7 @@ Navigate to \url{http://tgvaughan.github.io/icytree} and open the file \cl{outpu
 
 Try to replicate Fig.\ \ref{fig:IcyTreeSumm}. Hint: Look under style, at \mi{Mark Singletons}.
 Why might a node with a sampled ancestor be referred to as a singleton?
+How can you see the names of the fossils that are putative sampled ancestors?
 
 Try clicking on a branch.
 What are the fields telling you?
