added question to icytree section TEFBD

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1301,11 +1301,12 @@ Additionally, it correctly represents sampled ancestors on the tree as a node wi
 {\begin{framed}
 Navigate to \url{http://tgvaughan.github.io/icytree} and open the file \cl{output/bears.mcc.tre} in IcyTree.
 
-Try to replicate Fig.\ \ref{fig:IcyTreeSumm}. Hint: Look under style, at \mi{Mark Singletons}.
-Why might a node with a sampled ancestor be referred to as a singleton?
-How can you see the names of the fossils that are putative sampled ancestors?
+\colorbox{Thistle}{\bf ?} Try to replicate Fig.\ \ref{fig:IcyTreeSumm}. Hint: Look under style, at \mi{Mark Singletons}.
+Why might a node with a sampled ancestor be referred to as a singleton? 
 
-Try clicking on a branch.
+\colorbox{Thistle}{\bf ?} How can you see the names of the fossils that are putative sampled ancestors?
+
+\colorbox{Thistle}{\bf ?} Try clicking on a branch.
 What are the fields telling you?
 Are the ages of the fossil tips the same as what was shown in Tracer? 
 \end{framed}}
