--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial.tex
@@ -1,6 +1,8 @@
 \documentclass[11pt]{article}
 \input{../preamble}
 
+\newcommand{\QUEST}{{{\colorbox{Apricot}{\bf ?} }}}
+
 \begin{document}
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
